--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "axios": "^1.4.0",
     "bootstrap": "^5.2.3",
+    "date-fns": "^2.30.0",
     "quill": "^1.3.6",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.4",
